Added link to my repository

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="repository">
+        <a href="https://github.com/Abigail-Nguli/world-clock-nguli">Project Link</a>
+    </div>
     <script src="./src/index.js"></script>
   </body>
 </html>
