--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="repository">
-        <a href="https://github.com/Abigail-Nguli/world-clock-nguli">Project Link</a>
+    <div class="container">
+        <select id="cities">
+            <option value="">Select a city </option>
+            <option value="nairobi">Nairobi</option>
+            <option value="kampala">Kampala</option>
+            <option value="arusha">Arusha</option>
+            <option value="mogadishu">Mogadishu</option>
+        </select>
+        <div class="time">
+            11:52:33
+        </div>
+        <div class="city">
+            Nairobi
+        </div>
+        <div class="country">
+            Kenya
+        </div>
+        <div class="temperature">
+            🌥️<br>
+            26 C
+        </div>
+      <div class="repository">
+        <a href="https://github.com/Abigail-Nguli/world-clock-nguli"
+          >Project Link</a
+        >
+      </div>
     </div>
     <script src="./src/index.js"></script>
   </body>
