--- a/index.html
+++ b/index.html
@@ -4,36 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🕧World Clock🕧</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <div class="container">
-        <select id="cities">
-            <option value="">Select a city </option>
-            <option value="nairobi">Nairobi</option>
-            <option value="kampala">Kampala</option>
-            <option value="arusha">Arusha</option>
-            <option value="mogadishu">Mogadishu</option>
-        </select>
+      <select id="cities" autofocus>
+        <option value="">Select a city</option>
+        <option value="nairobi">Nairobi</option>
+        <option value="kampala">Kampala</option>
+        <option value="arusha">Arusha</option>
+        <option value="mogadishu">Mogadishu</option>
+      </select>
+      <div class="location">
+        <div>
+          <div class="city">Nairobi</div>
+          <div class="date">Sunday, 9th June, 2024</div>
+        </div>
         <div class="time">
-            11:52:33
-        </div>
-        <div class="city">
-            Nairobi
-        </div>
-        <div class="country">
-            Kenya
-        </div>
-        <div class="temperature">
-            🌥️<br>
-            26 C
-        </div>
-      <div class="repository">
-        <a href="https://github.com/Abigail-Nguli/world-clock-nguli"
-          >Project Link</a
-        >
+            <span>
+                1
+            </span>
+            <span>
+                1
+            </span>
+            <span class="colon">
+                :
+            </span>
+            <span>
+                5
+            </span>
+            <span>
+                2
+            </span>
+            <span class="colon">
+                :
+            </span>
+            <span>
+                3
+            </span>
+            <span>
+                7
+            </span>
+            <span>
+                AM
+            </span>
+
       </div>
     </div>
+    </div>
+    <footer>
+      <p>
+        This project was coded by
+        <a href="https://github.com/Abigail-Nguli"><strong>Abigail Nguli</strong></a> on
+        <a href="https://github.com/Abigail-Nguli/world-clock-nguli">Github</a>
+        and hosted on
+        <a href="https://world-clock-nguli.netlify.app/">Netlify</a>
+      </p>
+    </footer>
     <script src="./src/index.js"></script>
   </body>
 </html>
