--- a/index.html
+++ b/index.html
@@ -5,49 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🕧World Clock🕧</title>
     <link rel="stylesheet" href="./src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
     <div class="container">
       <select id="cities" autofocus>
         <option value="">Select a city</option>
         <option value="nairobi">Nairobi</option>
-        <option value="kampala">Kampala</option>
+        <option value="jamaica">jamaica</option>
         <option value="arusha">Arusha</option>
         <option value="mogadishu">Mogadishu</option>
       </select>
       <div class="location">
         <div>
           <div class="city">Nairobi</div>
-          <div class="date">Sunday, 9th June, 2024</div>
+          <div class="date" id="nairobi-date">Sunday, 9th June, 2024</div>
         </div>
-        <div class="time">
-            <span>
-                1
-            </span>
-            <span>
-                1
-            </span>
-            <span class="colon">
-                :
-            </span>
-            <span>
-                5
-            </span>
-            <span>
-                2
-            </span>
-            <span class="colon">
-                :
-            </span>
-            <span>
-                3
-            </span>
-            <span>
-                7
-            </span>
-            <span>
-                AM
-            </span>
+        <div class="time" id="nairobi-time">
+       
+      </div>
+    </div>
+    <div class="location">
+        <div>
+          <div class="city">Jamaica</div>
+          <div class="date" id="jamaica-date">Sunday, 9th June, 2024</div>
+        </div>
+        <div class="time" id="jamaica-time">
 
       </div>
     </div>
