Added functionality to the select element

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   </head>
   <body>
     <div class="container">
-      <select id="cities" autofocus>
+      <select id="selectCity" autofocus>
         <option value="">Select a city</option>
-        <option value="nairobi">Nairobi</option>
-        <option value="jamaica">jamaica</option>
-        <option value="arusha">Arusha</option>
-        <option value="mogadishu">Mogadishu</option>
+        <option value="Africa/Nairobi">Nairobi</option>
+        <option value="America/Jamaica">Jamaica</option>
+        <option value="Europe/Rome">Rome</option>
+        <option value="Indian/Maldives">Maldives</option>
       </select>
-      <div class="location">
+      <div class="cities" id="city">
+        <div class="location">
         <div>
           <div class="city">Nairobi</div>
           <div class="date" id="nairobi-date">Sunday, 9th June, 2024</div>
@@ -35,6 +36,7 @@
 
       </div>
     </div>
+      </div>
     </div>
     <footer>
       <p>
