Added a current location functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="container">
       <select id="selectCity" autofocus>
         <option value="">Select a city</option>
-        <option value="Africa/Nairobi">Nairobi</option>
+        <option value="current">Current Location</option>
+        <option value="Africa/Kampala">Kampala</option>
         <option value="America/Jamaica">Jamaica</option>
         <option value="Europe/Rome">Rome</option>
         <option value="Indian/Maldives">Maldives</option>
@@ -20,17 +21,17 @@
       <div class="cities" id="city">
         <div class="location">
         <div>
-          <div class="city">Nairobi</div>
-          <div class="date" id="nairobi-date">Sunday, 9th June, 2024</div>
+          <div class="city">Arusha</div>
+          <div class="date" id="arusha-date"></div>
         </div>
-        <div class="time" id="nairobi-time">
+        <div class="time" id="arusha-time">
        
       </div>
     </div>
     <div class="location">
         <div>
           <div class="city">Jamaica</div>
-          <div class="date" id="jamaica-date">Sunday, 9th June, 2024</div>
+          <div class="date" id="jamaica-date"></div>
         </div>
         <div class="time" id="jamaica-time">
 
