Added homepage link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <option value="">Select a city</option>
         <option value="current">Current Location</option>
         <option value="Africa/Kampala">Kampala</option>
-        <option value="America/Jamaica">Jamaica</option>
+        <option value="Pacific/Fiji">Fiji</option>
         <option value="Europe/Rome">Rome</option>
         <option value="Indian/Maldives">Maldives</option>
       </select>
@@ -36,7 +36,17 @@
         <div class="time" id="jamaica-time">
 
       </div>
-    </div>
+      </div>
+      <div class="location">
+        <div>
+          <div class="city">Vienna</div>
+          <div class="date" id="vienna-date"></div>
+        </div>
+        <div class="time" id="vienna-time">
+
+      </div>
+
+      </div>
       </div>
     </div>
     <footer>
