--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+        <h1>World Clock</h1>
       <select id="selectCity" autofocus>
         <option value="">Select a city</option>
         <option value="current">Current Location</option>
