--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
         <h1>World Clock</h1>
-      <select id="selectCity" autofocus>
+      <select id="selectCity">
         <option value="">Select a city</option>
         <option value="current">Current Location</option>
         <option value="Africa/Kampala">Kampala</option>
